--- a/pom.xml
+++ b/pom.xml
@@ -58,7 +58,7 @@
             <!-- Default configuration for running with: mvn clean javafx:run -->
             <id>default-cli</id>
             <configuration>
-              <mainClass>org.stacyliu.foodbuddy/org.stacyliu.foodbuddy.HelloApplication</mainClass>
+              <mainClass>org.stacyliu.foodbuddy/org.stacyliu.foodbuddy.FoodBuddyApplication</mainClass>
               <launcher>app</launcher>
               <jlinkZipName>app</jlinkZipName>
               <jlinkImageName>app</jlinkImageName>
